--- a/public/assests/css/style.css
+++ b/public/assests/css/style.css
@@ -2,6 +2,7 @@
   background-color: #fff;
   height: 80px;
   margin: 20px;
+  margin-top: 0px;
   border-radius: 16px;
   padding: 0.5rem;
   border: 5px solid #59e8e1;
@@ -72,14 +73,15 @@
 .back {
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: 1000px;
   background-repeat: repeat;
+  background-attachment: fixed;
 }
 
 .back::before {
-  background-color: rgba(88, 70, 70, 0.6);
+  background-color: rgba(33, 139, 135, 0.362);
   content: "";
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
