--- a/public/assests/css/Home.css
+++ b/public/assests/css/Home.css
@@ -5,7 +5,7 @@
   margin-top: 0px;
   border-radius: 16px;
   padding: 0.5rem;
-  border: 5px solid #59e8e1;
+  border: 5px solid #037b4d;
 }
 .navbar-brand {
   font-weight: 500;
