--- a/public/assests/css/Contact.css
+++ b/public/assests/css/Contact.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 .main-container {
-  background-image: url(back-3.jpeg);
+  /* background-image: url(back-3.jpeg); */
   background-size: cover;
   width: 100%;
   height: 1000px;
