--- a/public/assests/css/Contact.css
+++ b/public/assests/css/Contact.css
@@ -29,6 +29,9 @@ a {
 #section-wrapper {
   width: 100%;
   padding: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .box-wrapper {
   position: relative;
@@ -53,7 +56,7 @@ a {
   color: #fff;
 }
 .info-title {
-  text-align: left;
+  text-align: center;
   font-size: 28px;
   letter-spacing: 0.5px;
 }
@@ -173,7 +176,7 @@ a {
 
 /* Responsive css */
 
-@media only screen and (max-width: 767px) {
+@media (max-width: 767px) {
   .box-wrapper {
     width: 100%;
   }
