--- a/public/assests/css/Home.css
+++ b/public/assests/css/Home.css
@@ -12,6 +12,13 @@
   color: #009970;
   font-size: 24px;
   transition: 0.3s color;
+  width: 100px;
+  height: 75px;
+  margin-top: -8px;
+}
+.Clogo {
+  width: 100px;
+  height: 75px;
 }
 
 .login-button {
