--- a/public/assests/css/About.css
+++ b/public/assests/css/About.css
@@ -5,14 +5,21 @@
   box-sizing: border-box;
 }
 
+/* .navA {
+  width: 100%;
+  overflow-x: hidden;
+} */
+
 /* Global Styles */
 .bodyA {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-size: cover;
   width: 1550px;
   height: unset;
-  background-repeat: repeat;
+  background-repeat: no-repeat;
+  background-position: center;
   background-attachment: fixed;
+  background-position-x: fixed;
 }
 .bodyA::before {
   background-color: rgba(33, 139, 135, 0.362);
@@ -31,7 +38,8 @@
 h1 {
   font-size: 60px;
   font-weight: bold;
-  color: #fff;
+  color: rgba(49, 39, 157, 1);
+  font-style: italic;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 .content {
@@ -40,6 +48,7 @@ h1 {
 
 .mainA {
   display: flex;
+  width: 100%;
   justify-content: space-around;
   align-items: center;
   margin-top: 50px;
@@ -50,6 +59,7 @@ h1 {
   padding: 40px;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 20px;
+  border: 3px solid blue;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
   margin: 0 20px;
   transition: transform 0.3s ease-in-out;
@@ -73,7 +83,7 @@ h2 {
 p {
   font-size: 20px;
   line-height: 1.6;
-  color: #666;
+  color: #0f7b49;
 }
 
 .containerA {
@@ -105,7 +115,8 @@ p {
   transition: 0.4s;
   box-sizing: border-box;
   background: rgba(255, 255, 255, 0.9);
-  border-radius: 10px;
+  border-radius: 15px;
+  border: 3px solid blue;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -128,8 +139,7 @@ p {
 
 .desigA {
   font-style: italic;
-  color: #888;
-  font-size: 18px;
+  color: #0d6efd;
 }
 
 .aboutA {
