about us is modified

--- a/public/assests/css/About.css
+++ b/public/assests/css/About.css
@@ -38,7 +38,7 @@
 h1 {
   font-size: 60px;
   font-weight: bold;
-  color: rgba(49, 39, 157, 1);
+  color: #b1aaff;
   font-style: italic;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
