--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -22,11 +22,11 @@
   background-position-x: fixed;
 }
 .bodyA::before {
-  background-color: rgba(33, 139, 135, 0.362);
+  background-color: rgba(107, 108, 108, 0.205);
   content: "";
   position: fixed;
   top: 0;
-  /* bottom: 0; */
+  bottom: 0;
   right: 0;
   left: 0;
 }
