--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -1,6 +1,6 @@
 .navbar {
   background-color: #fff;
-  height: 80px;
+  height: 75px;
   /* margin: 20px; */
   margin-top: 0px;
   /* border-radius: 16px; */
@@ -89,7 +89,7 @@
 }
 
 .back::before {
-  background-color: rgba(33, 139, 135, 0.362);
+  background-color: rgba(107, 108, 108, 0.205);
   content: "";
   position: fixed;
   top: 0;
@@ -110,8 +110,8 @@
 .w-100 {
   width: 100% !important;
   height: 500px;
-  border: 6px solid white;
-  border-radius: 55px;
+  border: 2px solid rgba(255, 255, 255, 0.571);
+  border-radius: 25px;
 }
 .carousel-item {
   height: 500px;
