--- a/src/assets/css/Contact.css
+++ b/src/assets/css/Contact.css
@@ -4,22 +4,21 @@
   box-sizing: border-box;
 }
 .main-container {
-  /* background-image: url(back-3.jpeg); */
   background-size: cover;
   width: 100%;
   height: 1000px;
   background-repeat: repeat;
   background-attachment: fixed;
 }
-.main-container::before {
+/* .main-container::before {
   background-color: rgba(107, 108, 108, 0.205);
   content: "";
-  position: fixed;
+  position: absolute;
   top: 0;
   bottom: 0;
   right: 0;
   left: 0;
-}
+} */
 body,
 input,
 textarea,
@@ -68,6 +67,7 @@ a {
   margin-top: 17px;
   letter-spacing: 0.5px;
   line-height: 26px;
+  text-align: center;
 }
 .info-details {
   list-style: none;
@@ -110,6 +110,7 @@ a {
   transition: all 0.5s;
 }
 .social-icons li i:hover {
+  transform: scale(1.1);
   background: #fff;
   color: #000000;
 }
@@ -129,7 +130,7 @@ a {
 .form-fields {
   display: table;
   width: 100%;
-  padding: 15px 5px 5px 5px;
+  padding: 15px 5px 17px 5px;
 }
 .form-fields input,
 .form-fields textarea {
