--- a/src/assets/css/Contact.css
+++ b/src/assets/css/Contact.css
@@ -119,7 +119,7 @@ a {
   float: right;
   padding: 40px 25px 35px 25px;
   border-radius: 0px 30px 30px 0px;
-  background: #ecf0f3;
+  background: #ecf0f3d9;
 }
 .form-title {
   text-align: left;
