--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -14,8 +14,8 @@
 .bodyA {
   /* font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
   background-size: cover;
-  width: 1550px;
-  height: unset;
+  width: 100%;
+  min-height: 100vh;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
