--- a/src/assets/css/Contact.css
+++ b/src/assets/css/Contact.css
@@ -6,7 +6,7 @@
 .main-container {
   background-size: cover;
   width: 100%;
-  height: 1000px;
+  min-height: 100vh;
   background-repeat: repeat;
   background-attachment: fixed;
 }
@@ -42,7 +42,7 @@ a {
 }
 .info-wrap {
   width: 35%;
-  height: 583px;
+  height: 798px;
   padding: 40px;
   float: left;
   display: block;
@@ -119,13 +119,15 @@ a {
   float: right;
   padding: 40px 25px 35px 25px;
   border-radius: 0px 30px 30px 0px;
-  background: #ecf0f3d9;
+  background-color: rgba(255, 255, 255, 0.114);
+  backdrop-filter: blur(25px);
 }
 .form-title {
   text-align: left;
   margin-left: 23px;
   font-size: 28px;
   letter-spacing: 0.5px;
+  color: #fff;
 }
 .form-fields {
   display: table;
@@ -152,7 +154,8 @@ a {
   padding: 0px 30px;
   margin: 14px 12px;
   border-radius: 25px;
-  box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #ffffff;
+  border: 3px solid #31279d;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 .form-fields .form-group:last-child {
   width: 96%;
@@ -170,7 +173,6 @@ a {
   color: #fff;
   text-align: center;
   background: #f44770;
-  box-shadow: 3px 3px 8px #b1b1b1, -3px -3px 8px #ffffff;
   transition: 0.5s;
 }
 .submit-button:hover {
@@ -207,4 +209,7 @@ a {
   .submit-button {
     margin: 10px 0px;
   }
+}
+::placeholder {
+  color: #333;
 }
