--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -83,7 +83,7 @@
 .back {
   background-size: cover;
   width: 100%;
-  height: 1000px;
+  min-height: 100vh;
   background-repeat: repeat;
   background-attachment: fixed;
 }
