--- a/src/assets/css/Contact.css
+++ b/src/assets/css/Contact.css
@@ -39,10 +39,11 @@ a {
   margin: auto;
   margin-top: 35px;
   border-radius: 30px;
+  border: 3px solid #31279d;
 }
 .info-wrap {
   width: 35%;
-  height: 798px;
+  height: 597.4px;
   padding: 40px;
   float: left;
   display: block;
