--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+
+* {
+  font-family: "Ubuntu", sans-serif;
+}
 .navbar {
   background-color: #fff;
   height: 75px;
@@ -120,4 +125,71 @@
   font-size: 40px;
   color: white;
   text-align: center;
+}
+.container-content {
+  margin-top: 100px;
+}
+.ab-info {
+  margin-top: 50px;
+}
+.ab-info-txt {
+  background-color: rgba(255, 255, 255, 0.114);
+  backdrop-filter: blur(25px);
+  padding: 50px;
+  line-height: 2.5;
+  text-align: justify;
+  border-radius: 50px;
+  font-size: 18.5px;
+  color: white;
+}
+/* .ab-info-img {
+  height: 400px;
+} */
+.advan1 {
+  height: 400px;
+  width: 90%;
+}
+.mental1 {
+  height: 400px;
+  width: 100%;
+  margin-top: 25px;
+}
+#span1 {
+  font-size: 22px;
+  color: green;
+}
+
+.slate-info {
+  background-color: #b3e5fcde;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 25px 25px 0;
+  margin-top: 100px;
+  padding: 25px;
+  border-radius: 10px;
+}
+.slate-info-txt {
+  display: flex;
+  position: relative;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 50%;
+  align-items: self-start;
+  justify-content: center;
+  line-height: 3;
+  font-size: 20px;
+}
+.slate-info-img {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 50%;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+}
+.slate1 {
+  border-radius: 50px;
 }
