--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -10,15 +10,14 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  /* background: url(back-3.jpeg) no-repeat center center/cover; */
   background-size: cover;
   background-repeat: repeat;
   background-attachment: fixed;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+
 }
 .backgroundL::before {
-  background-color: rgba(33, 139, 135, 0.362);
+  background-color: rgba(107, 108, 108, 0.205);
   content: "";
   position: fixed;
   top: 0;
@@ -36,7 +35,7 @@
     255,
     255,
     255,
-    0.3
+    0.114
   ); /* Semi-transparent white, matching the contact us page */
   backdrop-filter: blur(25px);
   position: relative;
@@ -54,7 +53,6 @@
   border-radius: 0 0 10px 10px;
   color: white;
 }
-
 
 .formL {
   margin-top: 80px;
@@ -80,7 +78,7 @@
   font-weight: bold; /* Make font bolder */
 }
 
-.selectR{
+.selectR {
   padding: 15px;
   border: 2px solid #31279d; /* Dark blue, matching the contact us page */
   width: 100%;
@@ -96,7 +94,7 @@
   font-weight: bold;
 }
 
-option{
+option {
   font-size: large;
   cursor: pointer;
 }
@@ -110,8 +108,8 @@ option{
 label {
   position: absolute;
   left: 10px;
-  font-size: 12px;
-  color: #31279d; /* Dark blue, matching the contact us page */
+  font-size: 1rem;
+  color: #100d2e; /* Dark blue, matching the contact us page */
   transition: 0.2s;
 }
 
@@ -139,11 +137,11 @@ input[type="password"]:focus + label {
   display: flex;
   align-items: center;
   gap: 5px;
-  color: #31279d; /* Dark blue, matching the contact us page */
+  color: #96d0f1;
 }
 
 a {
-  color: #31279d; /* Dark blue, matching the contact us page */
+  color: #96d0f1;
   font-weight: bold; /* Make font bolder */
 }
 a:hover {
@@ -176,7 +174,7 @@ input:focus + label {
 
 .new_account {
   text-align: center;
-  color: #31279d; /* Dark blue, matching the contact us page */
+  color: #96d0f1;
   margin-top: 20px;
   font-weight: bold; /* Make font bolder */
 }
