--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -1,6 +1,6 @@
 .navbar {
   background-color: #fff;
-  height: 80px;
+  height: 75px;
   /* margin: 20px; */
   margin-top: 0px;
   /* border-radius: 16px; */
@@ -17,8 +17,9 @@
   margin-top: -8px;
 }
 .Clogo {
-  width: 100px;
-  height: 75px;
+  width: 90px;
+  height: 70px;
+  padding: 5px;
 }
 
 .login-button {
@@ -82,14 +83,14 @@
 
 .back {
   background-size: cover;
-  width: 100%;
-  height: 1000px;
+  width: 100vw;
+  min-height: 100vh;
   background-repeat: repeat;
   background-attachment: fixed;
 }
 
 .back::before {
-  background-color: rgba(33, 139, 135, 0.362);
+  background-color: rgba(107, 108, 108, 0.205);
   content: "";
   position: fixed;
   top: 0;
@@ -106,13 +107,20 @@
   width: 100%;
   overflow: hidden;
   height: 500px;
+  border-radius: 25px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.452);
 }
-.w-100 {
+.w-100  {
   width: 100% !important;
   height: 500px;
-  border: 6px solid white;
-  border-radius: 55px;
+  border-radius: 25px;
+  border: 2px solid rgba(255, 255, 255, 0.571);
 }
 .carousel-item {
   height: 500px;
+}
+
+#offcanvasNavbarLabel{
+width: 90px;
+height: 70px;
 }
