--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -193,3 +193,23 @@
 .slate1 {
   border-radius: 50px;
 }
+.benifites {
+  margin-top: 50px;
+}
+.benifites-txt {
+  background-color: rgba(255, 255, 255, 0.114);
+  backdrop-filter: blur(25px);
+  padding: 50px;
+  line-height: 2.5;
+  text-align: justify;
+  border-radius: 50px;
+  font-size: 18.5px;
+  color: white;
+}
+
+.benifites1 {
+  height: 400px;
+  width: 90%;
+  margin-top: 35px;
+  margin-left: 50px;
+}
