--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -101,16 +101,16 @@
   position: relative;
   width: 100%;
   overflow: hidden;
-  height: 500px;
+  height: 660px;
 }
 .w-100 {
   width: 100% !important;
-  height: 500px;
+  height: 660px;
   border: 2px solid rgba(255, 255, 255, 0.571);
   border-radius: 25px;
 }
 .carousel-item {
-  height: 500px;
+  height: 660px;
 }
 .abacus1 {
   font-size: 40px;
@@ -186,6 +186,7 @@
 } */
 .benifites {
   margin-top: 50px;
+  padding-bottom: 60px;
 }
 .benifites-txt {
   background-color: rgba(255, 255, 255, 0.114);
@@ -205,7 +206,32 @@
   margin-left: 50px;
 }
 
-/* .col{
-  margin-left: 15px ;
-  margin-right: 15px ;
- } */
+/* .col {
+  margin-left: 15px;
+  margin-right: 15px;
+} */
+
+.corr-img1 {
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  filter: blur(3px);
+}
+.corr-img2 {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.black-effect {
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/texture.jpg");
+  position: absolute;
+  background-size: contain;
+  top: 0px;
+  left: 0px;
+  opacity: 50%;
+}
