--- a/src/assets/css/Register.css
+++ b/src/assets/css/Register.css
@@ -30,8 +30,8 @@
   backdrop-filter: blur(25px);
   position: relative;
   margin-top: 10%;
+  margin-bottom: 50px;
 }
-
 
 .headerR {
   position: absolute;
@@ -92,7 +92,6 @@
   display: flex;
   align-items: center;
 }
-
 
 input[type="text"]:focus + label,
 input[type="password"]:focus + label {
