--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -4,6 +4,7 @@
   font-family: "Ubuntu", sans-serif;
 }
 .navbar {
+  /* width: 100%; */
   background-color: #fff;
   height: 75px;
   /* margin: 20px; */
@@ -198,6 +199,11 @@
   font-size: 18.5px;
   color: white;
 }
+
+/* .ab-info-img {
+  background-color: rgba(255, 255, 255, 0.114);
+  backdrop-filter: blur(25px);
+} */
 
 .benifites1 {
   height: 400px;
