--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -36,6 +36,10 @@ h1 {
   height: 320px;
   display: inline-grid;
 }
+.iso {
+  color: #38ee00;
+  text-decoration: none;
+}
 
 .mainA {
   display: flex;
