--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -212,7 +212,32 @@
   margin-left: 50px;
 }
 
-.col{
-  margin-left: 15px ;
-  margin-right: 15px ;
- }
+/* .col {
+  margin-left: 15px;
+  margin-right: 15px;
+} */
+
+.corr-img1 {
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  filter: blur(3px);
+}
+.corr-img2 {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.black-effect {
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/texture.jpg");
+  position: absolute;
+  background-size: contain;
+  top: 0px;
+  left: 0px;
+  opacity: 50%;
+}
