--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -26,8 +26,8 @@
 }
 
 h1 {
-  font-size: 60px;
-  font-weight: bold;
+  font-size: 55px;
+  font-weight: 600;
   color: #ffffff;
   text-transform: uppercase;
   text-shadow: 2px 2px 4px#00513b;
