--- a/src/assets/css/cards.css
+++ b/src/assets/css/cards.css
@@ -1,8 +1,13 @@
 .card {
   width: 17rem;
   margin: 30px 0;
-  box-shadow: 5px 10px 15px #99c;
+  box-shadow: 7px 7px 1px rgb(77 217 49);
   background-color: rgb(255 255 255 / 82%);
+  transition: 0.3s ease-in-out;
+}
+.card:hover {
+  /* transform: rotate3d(1, 1, 1, 10deg); */
+  transform: scale3d(1.1, 1.1, 1.1);
 }
 .card-body {
   width: 17rem;
@@ -11,4 +16,10 @@
   height: 200px;
   width: 250px;
   margin: 11px;
+}
+.card-text {
+  font-size: 22px;
+  color: black;
+  line-height: 1.6rem;
+  font-weight: 600;
 }
