--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -14,7 +14,7 @@
 .bodyA {
   /* font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
   background-size: cover;
-  width: 100vw;
+  width: 101vw;
   min-height: 100vh;
   background-repeat: repeat;
   background-attachment: fixed;
@@ -83,7 +83,7 @@ h1 {
   transform: translateY(-15px);
 }
 .InfoA {
-  background-color: #b3e5fcde;
+  background-color: #ffffffd6;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -91,6 +91,7 @@ h1 {
   margin-top: 100px;
   padding: 25px;
   border-radius: 10px;
+  width: 95%;
 }
 .InfoA1 {
   display: flex;
@@ -247,4 +248,7 @@ p {
   .teamsA {
     max-width: 100%;
   }
+}
+#footer-about {
+  width: 101vw;
 }
