--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -120,19 +120,25 @@
 }
 .container-content {
   margin-top: 100px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 .ab-info {
   margin-top: 50px;
 }
 .ab-info-txt {
-  background-color: rgba(255, 255, 255, 0.114);
+  background-color: #e3e7ece0;
   backdrop-filter: blur(25px);
   padding: 50px;
   line-height: 2.5;
   text-align: justify;
   border-radius: 50px;
   font-size: 18.5px;
-  color: white;
+  color: rgb(0, 0, 0);
+  transition: 0.3s ease-in-out;
+}
+.ab-info-txt:hover {
+  transform: translate3d(10px, 10px, 10px);
 }
 /* .ab-info-img {
   height: 400px;
@@ -190,14 +196,18 @@
   padding-bottom: 60px;
 }
 .benifites-txt {
-  background-color: rgba(255, 255, 255, 0.114);
+  background-color: #e3e7ece0;
   backdrop-filter: blur(25px);
   padding: 50px;
   line-height: 2.5;
   text-align: justify;
   border-radius: 50px;
   font-size: 18.5px;
-  color: white;
+  color: black;
+  transition: 0.3s ease-in-out;
+}
+.benifites-txt:hover {
+  transform: translate3d(10px, 10px, 10px);
 }
 
 /* .ab-info-img {
@@ -216,7 +226,11 @@
   margin-left: 15px;
   margin-right: 15px;
 } */
-
+.row {
+  width: 95%;
+  margin-left: 20px;
+  margin-right: 20px;
+}
 .corr-img1 {
   position: relative;
   top: 0;
