--- a/src/assets/css/Contact.css
+++ b/src/assets/css/Contact.css
@@ -23,7 +23,7 @@ body,
 input,
 textarea,
 a {
-  font-family: "Roboto", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
 }
 #section-wrapper {
   width: 100%;
