--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
-body {
-  font-family: "Ubuntu", sans-serif;
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css);
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+
+*{
+  font-family: 'Comfortaa', cursive;
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  background-image:url('./assets/images/back-4.jpg') ;
+  background-size: cover;
+  width: 100%;
+  min-height: 100vh;
+  background-repeat: repeat;
+  background-attachment: fixed;
 }
