--- a/src/assets/css/Teacher.css
+++ b/src/assets/css/Teacher.css
@@ -1,3 +1,10 @@
+.back {
+  background-size: cover;
+  width: 100%;
+  min-height: 100vh;
+  background-repeat: repeat;
+  background-attachment: fixed;
+}
 .teacherT {
   padding: 50px 0;
 }
