--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,21 @@ body{
   background-repeat: repeat;
   background-attachment: fixed;
 }
+
+.btn {
+  width: 25rem;
+  padding: 1rem 3rem;
+  cursor: pointer;
+  font-size: 1.8rem;
+  color: white;   
+  background-color: #41c829;
+  border-radius: 50px;
+  text-transform: capitalize;
+  text-align: center;
+}
+
+.btn:hover {
+  background-color:  #2980b9;
+  transform: scale(1.1);
+  box-shadow:  0 .5rem 1rem rgba(0, 0, 0, .2);
+}
