Dashboard is modified and treacher training form is added

--- a/src/assets/css/Contact.css
+++ b/src/assets/css/Contact.css
@@ -84,7 +84,7 @@
   text-decoration: none;
 }
 .info-details li a:hover {
-  color: #f44770;
+  color: #2fff39;
 }
 .social-icons {
   list-style: none;
