--- a/src/assets/css/Register.css
+++ b/src/assets/css/Register.css
@@ -11,7 +11,7 @@
   justify-content: center;
   background-size: cover;
   background-repeat: repeat;
-  /* background-attachment: fixed; */
+  background-attachment: fixed;
   width: 100%;
   min-height: 100vh;
 }
