--- a/src/admin/dashboard.css
+++ b/src/admin/dashboard.css
@@ -18,6 +18,7 @@ h3 {
 table {
   padding: 10px;
   line-height: 2.5rem;
+  width: 95%;
 }
 
 th,
@@ -156,8 +157,9 @@ td {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.container-dashboard .content .content-2 {
-  min-height: 60vh;
+.container-dashboard .content .content-2 .scroll-info {
+  /* min-height: 60vh; */
+  /* overflow-y: scroll; */
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
@@ -167,11 +169,15 @@ td {
 .container-dashboard .content .content-2 .new-students {
   flex: 2;
   background: white;
-  min-height: 50vh;
+  height: 400px;
   margin: 25px 25px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: flex;
   flex-direction: column;
+}
+
+.scroll-info {
+  overflow-y: scroll;
 }
 
 @media screen and (max-width: 1050px) {
